# trino-rust-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  MIGRATION.md  README.md
.claude/skills/release/: SKILL.md
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: audit.yaml  ci.yaml  crate-release.yaml  lint.yml  release-drafter.yml  release.yaml
examples/: derive.rs  https.rs  jwt_auth.rs  oauth2.rs  simple.rs  spooling.rs  stream.rs
integration_tests/: Cargo.toml
integration_tests/src/: docker.rs  lib.rs
integration_tests/test_setup/: docker-compose.yml
integration_tests/test_setup/oauth/: README.md  docker-compose.yml
integration_tests/test_setup/oauth/keycloak/: trino-realm.json
integration_tests/test_setup/oauth/trino/etc/: config.properties  node.properties
integration_tests/test_setup/trino/etc/coordinator/: config.properties  node.properties  spooling-manager.properties
integration_tests/test_setup/trino/etc/worker/: config.properties  node.properties
integration_tests/tests/: spooling_test.rs  transaction_test.rs
src/: auth.rs  client.rs  error.rs  header.rs  lib.rs  retry.rs  session.rs  ssl.rs  transaction.rs
src/auth/: mod.rs  oauth2.rs
src/models/: column.rs  error.rs  result.rs  stat.rs  ty.rs  warning.rs
src/spooling/: decoder.rs  encoding.rs  fetcher.rs  mod.rs  segment.rs
src/types/: boolean.rs  data_set.rs  date_time.rs  decimal.rs  fixed_char.rs  float.rs  integer.rs  interval_day_to_second.rs  interval_year_to_month.rs  ip_address.rs  json.rs  map.rs  mod.rs  option.rs  row.rs  seq.rs  str.rs  string.rs  util.rs  uuid.rs  var_binary.rs
tests/: context.rs  data_set.rs  get_all_empty.rs  macros.rs  oauth2.rs  query_result.rs  retry.rs  spooled.rs  spooling_protocol.rs  stream.rs  transaction.rs  types.rs
tests/data/models/: query_result_failed  query_result_finished_prepare  query_result_planning  query_result_queued  query_result_running  query_result_spooled_inline
tests/data/types/: boolean  complex  date_time  decimal  float  integer  interval_day_to_second  interval_year_to_month  ip_address  json  map  option  row  seq  uuid
tests/macros/: trino.rs
trino-rust-client-macros/: Cargo.toml
trino-rust-client-macros/src/: lib.rs
