[dependencies]
backon = "1.5.1"
bigdecimal = "0.4.8"
chrono = "0.4"
chrono-tz = "0.10"
derive_more = {version = "2.0.1", features = ["full"]}
futures = "0.3"
http = "1.3"
iterable = "0.6"
lazy_static = "1.5"
log = "0.4"
paste = "1.0.15"
regex = "1.11"
# network dependencies
reqwest = {version = "0.12.20", default-features = false, features = ["rustls-tls", "json"]}
# third party dependencies
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0.12"
tokio = {version = "1.16", features = ["full"]}
base64 = "0.22"
# self dependencies
trino-rust-client-macros = {version = "0.5.1", path = "trino-rust-client-macros"}
url = "2.5.4"
urlencoding = "2.1"
uuid = {version = "1.17", features = ["serde", "v4"]}

[dev-dependencies]
dotenv = "0.15"
maplit = "1.0"
trybuild = "1.0"
wiremock = "0.6.4"

[features]
Trino = []
default = []

[package]
authors = ["nudibranches technologies <contact@nudibranches.tech"]
description = "A trino client library"
documentation = "https://docs.rs/trino-rust-client"
edition = "2021"
homepage = "https://github.com/nudibranches-tech/trino-rust-client"
keywords = ["trino"]
license = "MIT"
name = "trino-rust-client"
readme = "README.md"
repository = "https://github.com/nudibranches-tech/trino-rust-client"
version = "0.7.3"

[workspace]
members = [".", "trino-rust-client-macros"]
