[dependencies]
backon = {workspace = true}
base64 = {workspace = true, optional = true}
bigdecimal = {workspace = true}
chrono = {workspace = true}
chrono-tz = {workspace = true}
derive_more = {workspace = true}
flate2 = {workspace = true, optional = true}
futures = {workspace = true}
http = {workspace = true}
iterable = {workspace = true}
lazy_static = {workspace = true}
log = {workspace = true}
lz4 = {workspace = true, optional = true}
paste = {workspace = true}
regex = {workspace = true}
# network dependencies
reqwest = {workspace = true}
# third party dependencies
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
# self dependencies
trino-rust-client-macros = {workspace = true}
url = {workspace = true}
uuid = {workspace = true}
zstd = {workspace = true, optional = true}

[dev-dependencies]
dotenv = "0.15"
maplit = "1.0"
trybuild = "1.0.112"
wiremock = "0.6.5"

[[example]]
name = "spooling"
path = "examples/spooling.rs"
required-features = ["spooling"]

[features]
Trino = []
default = []
spooling = ["base64", "zstd", "lz4", "flate2"]

[package]
authors = {workspace = true}
description = "A trino client library"
documentation = {workspace = true}
edition = {workspace = true}
homepage = {workspace = true}
keywords = ["trino"]
license = {workspace = true}
name = "trino-rust-client"
readme = "README.md"
repository = {workspace = true}
version = {workspace = true}

[[test]]
name = "spooling_protocol"
path = "tests/spooling_protocol.rs"
required-features = ["spooling"]

[workspace]
members = [".", "trino-rust-client-macros", "integration_tests"]

[workspace.dependencies]
backon = "1.5.2"
base64 = "0.22"
bigdecimal = "0.4.8"
chrono = "0.4.42"
chrono-tz = "0.10.4"
derive_more = {version = "2.0.1", features = ["full"]}
flate2 = "1.0"
futures = "0.3"
http = "1.3"
iterable = "0.6"
lazy_static = "1.5"
log = "0.4.28"
lz4 = "1.28"
paste = "1.0.15"
regex = "1.12.2"
reqwest = {version = "0.12.24", default-features = false, features = ["rustls-tls", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = {version = "1.16", features = ["full"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["fmt", "env-filter"]}
trino-rust-client-macros = {version = "0.7.1", path = "trino-rust-client-macros"}
url = "2.5.7"
uuid = {version = "1.18.1", features = ["serde", "v4"]}
zstd = "0.13"

[workspace.package]
authors = ["nudibranches technologies <contact@nudibranches.tech"]
documentation = "https://docs.rs/trino-rust-client"
edition = "2021"
homepage = "https://github.com/nudibranches-tech/trino-rust-client"
license = "MIT"
repository = "https://github.com/nudibranches-tech/trino-rust-client"
version = "0.9.2"
