[dependencies]
futures = {workspace = true}
log = {workspace = true}
reqwest = {workspace = true}
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
tracing-subscriber = {workspace = true}
trino-rust-client = {path = "..", features = ["spooling"]}
uuid = {workspace = true}

[package]
authors = {workspace = true}
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
name = "trino-integration-tests"
publish = false
repository = {workspace = true}
version = {workspace = true}
