[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "2.0.90", features = ["default", "extra-traits", "full"]}

[lib]
proc-macro = true

[package]
authors = ["nudibranches technologies <contact@nudibranches.tech>"]
description = "trino rust client macros"
documentation = "https://docs.rs/trino-rust-client"
edition = "2021"
homepage = "https://github.com/nudibranches-tech/trino-rust-client"
keywords = ["trino"]
license = "MIT"
name = "trino-rust-client-macros"
repository = "https://github.com/nudibranches-tech/trino-rust-client"
version = "0.4.0"
