[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = {version = "2.0.98", features = ["default", "extra-traits", "full"]}

[lib]
proc-macro = true

[package]
authors = ["nudibranches technologies <contact@nudibranches.tech>"]
description = "trino rust client macros"
documentation = "https://docs.rs/trino-rust-client"
edition = "2024"
homepage = "https://github.com/nudibranches-tech/trino-rust-client"
keywords = ["trino"]
license = "MIT"
name = "trino-rust-client-macros"
repository = "https://github.com/nudibranches-tech/trino-rust-client"
version = "0.5.1"
